--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,13 +1,13 @@
 <p id="notice"><%= notice %></p>
 
-<h1>ToDo Tasks</h1>
+<h1>ToDo</h1>
 
 <table>
   <thead>
     <tr>
       <th>Content</th>
       <th>State</th>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
@@ -19,6 +19,7 @@
         <td><%= link_to 'Show', task %></td>
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
         <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to "Mark as Doing", change_task_path(task, state: "doing"), method: :put %></td>
       </tr>
     <% end %>
   </tbody>
@@ -26,14 +27,14 @@
 
 <br>
 
-<h1>Doing Tasks</h1>
+<h1>Doing</h1>
 
 <table>
   <thead>
     <tr>
       <th>Content</th>
       <th>State</th>
-      <th colspan="3"></th>
+      <th colspan="5"></th>
     </tr>
   </thead>
 
@@ -45,6 +46,8 @@
         <td><%= link_to 'Show', task %></td>
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
         <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to "Mark as To Do", change_task_path(task, state: "to_do"), method: :put %></td>
+        <td><%= link_to "Mark as Done", change_task_path(task, state: "done"), method: :put %></td>
       </tr>
     <% end %>
   </tbody>
@@ -52,14 +55,14 @@
 
 <br>
 
-<h1>Done Tasks</h1>
+<h1>Done</h1>
 
 <table>
   <thead>
     <tr>
       <th>Content</th>
       <th>State</th>
-      <th colspan="3"></th>
+      <th colspan="4"></th>
     </tr>
   </thead>
 
@@ -71,6 +74,7 @@
         <td><%= link_to 'Show', task %></td>
         <td><%= link_to 'Edit', edit_task_path(task) %></td>
         <td><%= link_to 'Destroy', task, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= link_to "Mark as Doing", change_task_path(task, state: "doing"), method: :put %></td>
       </tr>
     <% end %>
   </tbody>
