--- a/app/views/tasks/_task.html.erb
+++ b/app/views/tasks/_task.html.erb
@@ -2,8 +2,12 @@
 
 	<div class="panel-heading">
 		<%= link_to edit_task_path(task) do %>
-			created <%= time_ago_in_words(task.created_at) %> ago</div>
+			created <%= time_ago_in_words(task.created_at) %> ago
 		<% end %>
+
+		<%= link_to "x", task_path(task), method: :delete, data: {confirm: "Are you sure?"}, class: "pull-right" %>
+
+	</div>
 
 	<div class="panel-body"><%= task.content %></div>
 
@@ -19,4 +23,5 @@
 			<%= link_to "<li class='fa fa-arrow-right'></li>".html_safe, change_task_path(task, state: "doing"), method: :put, class: "btn btn-info btn-md btn-block" %>
 		<% end %>
 	</div>
+
 </div>
